Switched background colour

--- a/index.html
+++ b/index.html
@@ -8,20 +8,21 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+          rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container column">
         <div class="container title">
             <h1>Flixter</h1>
-            <img src="https://via.placeholder.com/100" alt="">
+            <span class="material-icons" style="font-size: 48px">movie</span>
         </div>
         <div class="container search">
             <form id='search'>
                 <div class="form-container">
-                    <label for="search-input" class="text form-item">Search: </label><br>
+                    <span class="material-icons" style="font-size: 28px">search</span>
                     <input type="text" id="search-input" class="text form-item" name="search-input"><br>
-                    <input type="submit" class="text form-item" value="Search">
                     <button type="button" id="close-search-btn">Clear Search</button>
                 </div>
             </form>
@@ -35,7 +36,7 @@
             <div class="container modal-topbar">
                 <h1 id="movie-modal-title" class="title">MOVIE TITLE</h1>
                 <div class="spacer"></div>
-                <button id="movie-modal-close-btn">Close</button>
+                <span class="material-icons" id="movie-modal-close-btn" style="font-size: 48px">close</span>
             </div>
             <div class="container modal-subbar">
                 <h3 id="movie-modal-release-date" class="text modal-subbar">RELEASE DATE</h3>
